# Whatsapp_CRM_BOT

./: .env  Dockerfile  Dockerfile.worker  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  80779d254241_initial.py
app/: __init__.py  main.py  tests.http
app/ai/: crm_engine.py  rag_service.py
app/ai/knowledge_base/: processor.py  rag_pipeline.py  retriever.py
app/ai/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py
app/auth/: dependencies.py
app/core/: __init__.py  celery_app.py  logging.py
app/core/config/: __init__.py  settings.py
app/core/database/: __init__.py  base.py  redis.py
app/core/exceptions/: __init__.py
app/core/middleware/: __init__.py  exception_handler.py  request_id.py
app/db_seed/: lead_stages_data.py  permissions_data.py  roles_data.py  seeder.py  whatsapp_templates_data.py
app/models/: activity.py  ai_memory.py  appointment.py  auth.py  calendar_credential.py  campaign.py  company.py  conversation.py  conversation_summary.py  crm.py  customer.py  followup.py  knowledge_document.py  lead.py  note.py  notification.py  order.py  product.py  tag.py  task.py  ticket.py  whatsapp.py  whatsapp_template.py
app/notifications/: engine.py
app/repositories/: auth.py  base.py  calendar_credential.py  crm.py
app/schemas/: auth.py  common.py  crm.py
app/services/: appointment_calendar_sync.py  auth.py  crm.py
app/websocket/: connection_manager.py  events.py
app/whatsapp/: client.py  conversation_service.py  webhook_parser.py
scripts/: seed_db.py
tests/: conftest.py
tests/integration/: test_analytics_api.py  test_auth_api.py  test_customers_api.py  test_leads_api.py  test_whatsapp_webhook.py
tests/unit/: test_notification_templates.py  test_rag_chunking.py  test_security.py  test_seed_data.py  test_whatsapp_webhook_parser.py
(+35 files in other folders)
