[tool.poetry]
name = "whatsapp-crm-backend"
version = "1.0.0"
description = "AI-Powered WhatsApp CRM Backend"
authors = ["Engineering Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
redis = {extras = ["asyncio"], version = "^5.2.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"
openai = "^1.55.0"
google-generativeai = "^0.8.0"
python-multipart = "^0.0.18"
aiofiles = "^24.1.0"
pillow = "^11.0.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
numpy = "^2.1.3"
tenacity = "^9.0.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
websockets = "^14.1"
cryptography = "^43.0.3"
slowapi = "^0.1.9"
email-validator = "^2.2.0"
jinja2 = "^3.1.4"
celery-beat = "^2.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.1"
faker = "^30.8.2"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
